# AppImageManager

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
debian/: postinst  prerm
packaging/: app-image-manager.metainfo.xml  appimage-handler.desktop  mime-register.sh
packaging/rpm/: post_install.sh  post_uninstall.sh  pre_uninstall.sh
src/: appimage.rs  cli.rs  desktop.rs  installer.rs  kdialog.rs  launcher.rs  main.rs  metadata.rs  mime.rs
