[package]
name = "app-image-manager"
version = "0.1.2"
edition = "2024"
description = "KDE-native manager for AppImage: click-to-install via kdialog, menu integration, list & uninstall"
license = "MIT"
authors = ["toresoft <toresoft@gmail.com>"]
homepage = "https://github.com/toresoft/app-image-manager"
repository = "https://github.com/toresoft/app-image-manager"

[[bin]]
name = "app-image-manager"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }

# ---------------------------------------------------------------------------
# cargo-deb settings (Ubuntu/Debian .deb packaging)
# Docs: https://github.com/kornelski/cargo-deb#configuration
# ---------------------------------------------------------------------------
[package.metadata.deb]
maintainer = "toresoft <toresoft@gmail.com>"
copyright = "2026, toresoft <toresoft@gmail.com>"
license-file = ["LICENSE", "4"]
depends = "kdialog, squashfs-tools, xdg-utils, desktop-file-utils, gtk-update-icon-cache"
section = "utils"
priority = "optional"
assets = [
    # Binary
    ["target/release/app-image-manager", "usr/bin/", "755"],
    # MIME handler desktop entry (system-wide, points at /usr/bin/...)
    ["packaging/appimage-handler.desktop", "usr/share/applications/", "644"],
    # AppData / metainfo for software centers
    ["packaging/app-image-manager.metainfo.xml", "usr/share/metainfo/", "644"],
    # Shared MIME registration helper invoked by postinst/prerm
    ["packaging/mime-register.sh", "usr/lib/app-image-manager/", "755"],
]
# Maintainer scripts under debian/. postinst registers the MIME default;
# prerm deregisters on removal (before files are deleted) and keeps it on
# upgrade so the new postinst can refresh it.
maintainer-scripts = "debian/"

# ---------------------------------------------------------------------------
# cargo-generate-rpm settings (Fedora .rpm packaging)
# Docs: https://github.com/cat-in-136/cargo-generate-rpm
# ---------------------------------------------------------------------------
[package.metadata.generate-rpm]
license = "MIT"
url = "https://github.com/toresoft/app-image-manager"
summary = "KDE-native manager for AppImage"
description = """\
AppImage Manager intercepts the click on an AppImage in Dolphin, asks for \
confirmation via kdialog, then installs it under ~/.local/bin with a full \
KDE menu entry (icons + .desktop) and launches it. Also provides list and \
uninstall subcommands."""
# Build requires the standard toolchain; runtime deps mirror the .deb.
requires = {
    "kdialog" = "*",
    "squashfs-tools" = "*",
    "xdg-utils" = "*",
    "desktop-file-utils" = "*",
    "gtk-update-icon-cache" = "*",
}
# RPM maintainer scriptlets (MUST come before [[...assets]] arrays, otherwise
# TOML would attach them to the last asset entry). post_install_script
# registers the MIME default (idempotent, so it doubles as the upgrade
# handler since %post runs on both install and upgrade); pre_uninstall_script
# deregisters on real removal ($1 == 0); post_uninstall_script refreshes
# shared caches after the files are gone.
# Docs: https://github.com/cat-in-136/cargo-generate-rpm#configuration
post_install_script = "packaging/rpm/post_install.sh"
pre_uninstall_script = "packaging/rpm/pre_uninstall.sh"
post_uninstall_script = "packaging/rpm/post_uninstall.sh"
# Explicit asset list. cargo-generate-rpm does NOT auto-include the binary
# when custom assets are present, so we declare every file here.
[[package.metadata.generate-rpm.assets]]
source = "target/release/app-image-manager"
dest = "/usr/bin/app-image-manager"
mode = "0755"
[[package.metadata.generate-rpm.assets]]
source = "packaging/appimage-handler.desktop"
dest = "/usr/share/applications/appimage-handler.desktop"
mode = "0644"
[[package.metadata.generate-rpm.assets]]
source = "packaging/app-image-manager.metainfo.xml"
dest = "/usr/share/metainfo/app-image-manager.metainfo.xml"
mode = "0644"
[[package.metadata.generate-rpm.assets]]
source = "packaging/mime-register.sh"
dest = "/usr/lib/app-image-manager/mime-register.sh"
mode = "0755"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
